--- a/Grupparbete/Grupparbete.csproj
+++ b/Grupparbete/Grupparbete.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
+    <Compile Include="HockeyTeams.cs" />
     <Compile Include="ITeam.cs" />
     <Compile Include="Odds.cs" />
     <Compile Include="Program.cs" />
